# controllers/game.controller.ts
@@ -1,11 +1,23 @@
 import { type NextFunction, type Request, type Response } from "express";
 import { GameService } from "../services/game.service.ts";
+import type { StartGameRequestParams } from "../types/game.types.ts";
 
 const gameService = new GameService();
 
-export async function startGame(_: Request, res: Response, next: NextFunction) {
+export async function startGame(req: Request<StartGameRequestParams>, res: Response, next: NextFunction) {
   try {
+    const { playerName } = req.params;
+
+    // Check if playerName is provided in DB if not, continue to start a new game
+
+    if (!playerName) {
+      res.status(400).json({ error: "Player name is required" });
+      return;
+    }
+
     const game = await gameService.startGame();
+
+    // Playername is db
     res.status(201).json(game);
   } catch (error) {
     next(error);
@@ -14,8 +26,9 @@ export async function startGame(_: Request, res: Response, next: NextFunction) {
 
 export async function getGame(req: Request, res: Response, next: NextFunction) {
   try {
-    const game =
-      req.params.gameId ?? (await gameService.getGame(req.params.gameId));
+    const { gameId } = req.params;
+
+    const game = gameId ?? (await gameService.getGame(gameId));
 
     res.json(game);
   } catch (error) {
@@ -30,9 +43,9 @@ export async function restartGame(
 ) {
   try {
     // Needs to implement a db in the service layer to restart the game
-    const result = await gameService.startGame();
+    // const result = await gameService.startGame();
 
-    res.json(result);
+    // res.json(result);
   } catch (error) {
     next(error);
   }
